--- a/editor-area-styles.css
+++ b/editor-area-styles.css
@@ -12,6 +12,8 @@ body {
 	padding-left: 30px;
 	padding-right: 30px;
   line-height: 1.6;
+  /*margin-top: -1.0em;*/
+  margin-bottom: 2.0em;
 }
 
 a {
