--- a/editor-styles.css
+++ b/editor-styles.css
@@ -1,4 +1,5 @@
-html, body, #editor { height: 100%; margin: 0px; }
+/* I don't think that this does anything */
+/*html, body, #editor { height: 100%; margin: 0px; }
 .mce-edit-area { display: flex !important; flex-flow: column; }
 .mce-edit-area iframe { flex: 1 1 auto; }
 .mce-tinymce { height: 100%; }
@@ -6,15 +7,7 @@ html, body, #editor { height: 100%; margin: 0px; }
 .mce-panel { border: 0; }
 .mce-container-body.mce-stack-layout { display: flex; flex-flow: column; height: 100%; }
 .mce-stack-layout-item { flex: 0 0 auto; }
-.mce-edit-area { flex:1 1 auto; }
-
-/* Style the title bar */
-.window-title	{
-  padding-top: 8px !important;
-  font-size: 14px !important;
-  font-family: -apple-system, BlinkMacSystemFont, "helvetica neue", helvetica, roboto, noto, "segoe ui", arial, sans-serif !important;
-  color: #808080 !important;
-}
+.mce-edit-area { flex:1 1 auto; }*/
 
 /* Remove toolbar top border */
 .tox-tinymce {
