--- a/css/editor-styles-light.css
+++ b/css/editor-styles-light.css
@@ -56,3 +56,10 @@ html, body, #editor { height: 100%; margin: 0px; }
   background: #f2f2f2;
 }
 
+/* Get ride of the markdown sidebar slide in/out animation */
+.tox .tox-sidebar--sliding-growing,
+.tox .tox-sidebar--sliding-shrinking {
+  /*transition: none !important;*/
+  transition: width 0.01s ease-out !important;
+}
+
