--- a/css/editor-area-styles.css
+++ b/css/editor-area-styles.css
@@ -72,7 +72,7 @@ a:visited, a:hover, a:active {
 
 a:not([class]) {
   text-decoration: none;
-  background-image: linear-gradient( 0%, rgb(50, 50, 50) 100%);
+  background-image: linear-gradient(0%, rgb(50, 50, 50) 100%);
   background-repeat: repeat-x;
   background-position: 0 100%;
   background-size: 1px 1px;
@@ -192,6 +192,9 @@ blockquote {
 }
 
 code {
+  padding-top: 2px;
+  padding-left: 2px;
+  padding-right: 2px;
   color: var(--general-text-color);
   font-size: 14px;
   background: var(--code-background-color);
