--- a/css/editor-area-styles.css
+++ b/css/editor-area-styles.css
@@ -201,26 +201,31 @@ code {
 }
 
 table {
-  border: 1px solid var(--table-border-color) !important;
+  border: 1px solid rgb(22, 22, 22);
   padding: 0;
   word-break: initial;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 3px 10px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.32), 0 3px 10px rgba(0, 0, 0, 0.24);
+  border-radius: 14px; /* Rounded corners */
+  background-color: rgb(38, 38, 38);
 }
 table tr {
-  border: 1px solid var(--table-border-color) !important;
+  border: 1px solid rgb(22, 22, 22);
   margin: 0;
   padding: 0;
+  border-radius: 14px; /* Rounded corners */
 }
 table tr th {
   font-weight: bold;
-  border: 1px solid var(--table-border-color) !important;
+  border: 1px solid rgb(22, 22, 22);
   margin: 0;
   padding: 6px 13px;
+  border-radius: 14px; /* Rounded corners */
 }
 table tr td {
-  border: 1px solid var(--table-border-color) !important;
+  border: 1px solid rgb(22, 22, 22);
   margin: 0;
   padding: 6px 13px;
+  border-radius: 14px; /* Rounded corners */
 }
 
 th, td {
