--- a/css/editor-area-styles.css
+++ b/css/editor-area-styles.css
@@ -231,7 +231,7 @@ table {
   border-radius: 10px;
   background-color: var(--table-background-color);
   font-size: 14px;
-  width: 100%;
+  /*width: 100%;*/
 }
 table tr {
   margin: 0;
