--- a/css/editor-area-styles.css
+++ b/css/editor-area-styles.css
@@ -191,7 +191,8 @@ h6 {
 hr {
   height: 2px;
   padding: 0;
-  margin: 16px 0;
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
   background-color: var(--horizontal-line-color);
   border: 0 none;
   overflow: hidden;
