--- a/css/editor-area-styles.css
+++ b/css/editor-area-styles.css
@@ -221,7 +221,8 @@ code, pre {
 	padding-right: 2px;
 	color: var(--general-text-color);
 	font-size: 14px !important;
-	background: var(--code-background-color);
+	/*background: var(--code-background-color) !important;
+	text-shadow: 0 0px transparent !important;*/
 }
 
 pre {
