- Replace TinyMCE Showdown-based markdown plugin with plain TinyMCE code + Showdown itself.
- Add Turndown as alternative and new default (less buggy) HTML-to-markdown conversion engine (option to switch between Turndown and Showdown in preferences menu).

- Automatically put YAML/TOML front matter into a markdown code block when opening a markdown file so that isn't parsed and messed up.

A couple of minor fixes (fix broken copy, preferences refresh after submit).

--- a/css/editor-styles.css
+++ b/css/editor-styles.css
@@ -251,6 +251,7 @@ html, body, #textEditor { height: 100%; margin: 0px; }
 .tox .tox-sidebar {
 	color: var(--general-text-color) !important;
 	background-color: var(--lesser-background-color) !important;
+	border-left: 1px solid var(--general-border-color) !important;
 }
 
 /* Markdown sidebar left border */
