--- a/css/editor-styles.css
+++ b/css/editor-styles.css
@@ -92,10 +92,17 @@ html, body, #textEditor { height: 100%; margin: 0px; }
 }
 
 /* For centering filename toolbar button */
-.tox-editor-header .tox-toolbar__group button:last-of-type {
+.tox-editor-header .tox-toolbar__group button[title="Filename"] {
 	margin-left: auto !important;
 	margin-right: auto !important;
 	background-color: transparent !important;
+}
+
+/* Hide username if window width is narrow */
+@media screen and (max-width: 950px) {
+  .tox-editor-header .tox-toolbar__group button[title="Filename"] {
+    display: none !important;
+  }
 }
 
 /* Style the filename toolbar button text */
